mark deleted items
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-reference-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference-grid/template.html
@@ -1,4 +1,4 @@
-<div ng-if="mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
+<div ng-if="mnfDoc._state === 'deleted' || mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
      class="mnf-grid-field-ready">
   <span>
     {{mnfDoc['_' + mnfField + '_formatted']}}
