--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -71,7 +71,8 @@
       <tr class="mn-grid-data-row"
           ng-repeat="item in grid.owner.items"
           mn-right-click="grid.rightClick(item, $event)"
-          ng-class="{'last-selected': grid.isLastSelected(item), 'deleted': item._state === 'deleted'}">
+          ng-class="{'last-selected': grid.isLastSelected(item)}"
+          ng-hide="item._state === 'deleted'">
         <td ng-show="grid.showSelectColumn">
           <input type="checkbox" class="mn-grid-select-box"
                  ng-checked="grid.isItemSelected(item)"
