--- a/app/assets/javascripts/mohican/directives/mnf-reference-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference-grid/template.html
@@ -1,10 +1,10 @@
-<div ng-if="mnfDoc._state === 'deleted' || mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
+<div ng-if="readOnly || mnfDoc._state === 'deleted' || mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
      class="mnf-grid-field-ready">
   <span>
     {{mnfDoc['_' + mnfField + '_formatted']}}
   </span>
 </div>
-<div ng-if="mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing'"
+<div ng-if="!readOnly && (mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing')"
      ng-click="openRefDialog()"
      ng-disabled="mnfDoc._state === 'committing'"
      ng-class="{'changed': mnfDoc['_' + mnfField + '_changed']}"
