--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -10,6 +10,8 @@
             <mnf-rollback></mnf-rollback>
             <mnf-delete></mnf-delete>
           </div>
+          <mnf-date mnf-field="created_at"
+                    mnf-label="Created at:"></mnf-date>
           <mnf-reference mnf-label="Creator:"
                          mnf-ref-resource="users"
                          mnf-ref-id="creator_ref"
