--- a/app/assets/javascripts/mohican/directives/mnf-date/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-date/template.html
@@ -10,16 +10,28 @@
   <label class="col-sm-4 control-label" for="{{mnfField}}">{{mnfLabel}}</label>
   <div class="col-sm-8">
     <p class="input-group">
-      <input type="date"
+      <!-- <input type="date"
              class="form-control"
              datepicker-popup
              ng-model="mnfDoc._edit[mnfField]"
-             ng-change="textChanged()" />
+             ng-change="textChanged()" /> -->
      <!-- <input type="text"
             date-range-picker
             options="{singleDatePicker: true}"
             class="form-control date-picker"
             ng-model="{startDate: mnfDoc._edit[mnfField]}" /> -->
+      <input type="text"
+             class="form-control"
+             datepicker-popup="dd.MM.yyyy."
+             ng-model="mnfDoc._edit[mnfField]"
+             ng-change="textChanged()"
+             is-open="status.opened"
+             close-text="Close" />
+      <span class="input-group-btn">
+        <button type="button" class="btn btn-default" ng-click="openDateDialog($event)">
+          <i class="glyphicon glyphicon-calendar"></i>
+        </button>
+      </span>
     </p>
   </div>
 </div>
