mn-grid: ng-if instead of ng-hide, only one body
There are two bodies: one for selected and one for all items. Previously
the one no needed was hidden (but still rendered) but now with ng-if
it is not rendered. This is very important, as rendered hidden documents
are still taking memory and time during digests.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -62,7 +62,7 @@
         </th>
       </tr>
     </thead>
-    <tbody ng-hide="grid.onlySelectedItemsShown">
+    <tbody ng-if="!grid.onlySelectedItemsShown">
       <tr ng-show="grid.owner.items.length === 0">
         <td class="mn-content-footer-status-msg" colspan="100%">
           No items to show
@@ -96,7 +96,7 @@
         <td>
       </tr>
     </tbody>
-    <tbody ng-show="grid.onlySelectedItemsShown">
+    <tbody ng-if="grid.onlySelectedItemsShown">
       <tr ng-show="grid.selectedItems.length === 0">
         <td class="mn-content-footer-status-msg" colspan="100%">
           No items to show
