--- a/app/assets/javascripts/mohican/directives/mnf-date/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-date/template.html
@@ -9,7 +9,7 @@
      class="form-group form-group-sm mn-form-group">
   <label class="col-sm-4 control-label" for="{{mnfField}}">{{mnfLabel}}</label>
   <div class="col-sm-8">
-    <p class="input-group">
+    <p class="input-group input-group-sm">
       <!-- <input type="date"
              class="form-control"
              datepicker-popup
