--- a/app/assets/javascripts/mohican/directives/mnf-date/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-date/template.html
@@ -2,7 +2,7 @@
      class="form-group form-group-sm mn-form-group">
   <label class="col-sm-4 control-label" for="formGroupInputLarge">{{mnfLabel}}</label>
   <div class="col-sm-8 state-ready-field-value">
-    <span>{{moment(mnfDoc[mnfField]).format('DD.MM.YYYY.')}}</span>
+    <span>{{mnfDoc[mnfField] ? moment(mnfDoc[mnfField]).format('DD.MM.YYYY.') : ''}}</span>
   </div>
 </div>
 <div ng-if="mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing'"
