--- a/app/assets/javascripts/mohican/directives/mnf-text-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-text-grid/template.html
@@ -1,7 +1,7 @@
 <div ng-if="readOnly || mnfDoc._state === 'deleted' || mnfDoc._state === 'ready' || mnfDoc._state === 'deleting'"
      class="mnf-grid-field-ready">
   <span>
-    {{mnfDoc['_' + mnfField + '_formatted']}}
+    {{mnfDoc[mnfField]}}
   </span>
 </div>
 <div ng-if="!readOnly && (mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing')"
