--- a/app/assets/javascripts/mohican/directives/mnf-select-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-select-grid/template.html
@@ -12,7 +12,7 @@
         class="success"
         input-model="selectItems"
         on-item-click="textChanged(data.name)"
-        output-model="selectedValues1"
+        output-model="selectedItems"
         button-label="name"
         item-label="name"
         tick-property="selected"
