--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -17,7 +17,8 @@
           <mnf-edit-grid mnf-doc="item"></mnf-edit-grid>
           <mnf-commit-grid mnf-doc="item"></mnf-commit-grid>
           <mnf-rollback-grid mnf-doc="item"></mnf-rollback-grid>
-          <mnf-delete-grid mnf-doc="item"></mnf-delete-grid>
+          <mnf-delete-grid mnf-doc="item"
+                           mn-on-delete="ctrl.loadMnGridItems()"></mnf-delete-grid>
           <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
             <span class="mn-action-icon glyphicon glyphicon-paperclip"></span>
           </a>
