--- a/app/assets/javascripts/app/routes/products-index.html
+++ b/app/assets/javascripts/app/routes/products-index.html
@@ -9,9 +9,10 @@
       <mn-grid mn-select="multiple"
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
-               mn-grid-fill-height="true">
+               mn-grid-fill-height="true"
+               mn-actions-width="140px">
         <span ui-sref="products-doc({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })"
-              class="mn-action-icon glyphicon glyphicon-folder-open"></span>
+              class="mn-action-icon glyphicon glyphicon-open"></span>
       </mn-grid>
     </div>
   </div>
