--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -72,8 +72,8 @@
       <tr class="mn-grid-data-row"
           ng-repeat="item in grid.owner.items"
           mn-right-click="grid.rightClick(item, $event)"
-          ng-class="{'last-selected': grid.isLastSelected(item)}"
-          ng-hide="item._state === 'deleted'">
+          ng-class="{'last-selected': grid.isLastSelected(item),
+                     'deleted': item._state === 'deleted'}">
         <td ng-show="grid.showSelectColumn">
           <input type="checkbox" class="mn-grid-select-box"
                  ng-checked="grid.isItemSelected(item)"
@@ -102,7 +102,7 @@
                               mnf-field-source="field.refFieldSource"></mnf-reference-grid>
         </td>
         <td>
-          <mn-grid-actions></mn-grid-actions>
+          <mn-grid-actions ng-hide="item._state === 'deleted'"></mn-grid-actions>
         <td>
       </tr>
     </tbody>
@@ -113,6 +113,7 @@
         </td>
       </tr>
       <tr class="mn-grid-data-row"
+          ng-class="{'deleted': item._state === 'deleted'}"
           ng-repeat="item in grid.selectedItems"
           mn-right-click="grid.rightClick(item, $event)">
         <td ng-show="grid.showSelectColumn">
@@ -144,7 +145,7 @@
                               mnf-field-source="field.refFieldSource"></mnf-reference-grid>
         </td>
         <td>
-          <mn-grid-actions></mn-grid-actions>
+          <mn-grid-actions ng-hide="item._state === 'deleted'"></mn-grid-actions>
         <td>
       </tr>
     </tbody>
