--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -73,7 +73,8 @@
           ng-repeat="item in grid.owner.items"
           mn-right-click="grid.rightClick(item, $event)"
           ng-class="{'last-selected': grid.isLastSelected(item),
-                     'deleted': item._state === 'deleted'}">
+                     'deleted': item._state === 'deleted'}"
+          ng-hide="item._state === 'deleted'">
         <td ng-show="grid.showSelectColumn">
           <input type="checkbox" class="mn-grid-select-box"
                  ng-checked="grid.isItemSelected(item)"
@@ -169,7 +170,7 @@
       </span> {{grid.owner.service.totalCount}}
     </span>
     <span ng-if="!grid.owner.service.totalCount">
-       {{grid.owner.items.length}}
+       {{grid.owner.items.filter(grid.isItemVisible).length}}
     </span>
     <span ng-if="!(grid.selectedItems.length > 0)">
       loaded {{isObject(grid.owner.service.totalCount)}}
