--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/"></a>
+    <a class="navbar-brand" href="/#/begin"></a>
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" collapse="navCollapsed">
