--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-static-top navbar-inverse container-fluid" role="navigation" ng-controller="MainCtrl">
+<nav class="navbar navbar-static-top navbar-inverse container-fluid" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
