mnf-preview-grid
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -13,8 +13,8 @@
                  mn-popup="ctrl.popup(clickedItem, selectedItems)"
                  mn-grid-fill-height="true"
                  mn-actions-width="140px">
-          <span ui-sref="orders-doc({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })"
-                class="mn-action-icon glyphicon glyphicon-open"></span>
+          <mnf-preview-grid mnf-doc="item"
+                            route="orders"></mnf-preview-grid>
           <mnf-edit-grid mnf-doc="item"></mnf-edit-grid>
           <mnf-commit-grid mnf-doc="item"></mnf-commit-grid>
           <mnf-rollback-grid mnf-doc="item"></mnf-rollback-grid>
