--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -1,6 +1,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 mn-content-panel">
+      <button class="btn btn-default" ng-click="ctrl.startProcessingOrder()">
+        Start Processing order
+      </button>
+    </div>
+    <div class="col-xs-12 mn-content-panel hidden-xs">
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
       <div ng-if="ctrl.itemForm" class="container-fluid">
         <mnf-form mnf-doc="ctrl.itemForm">
