--- a/app/assets/javascripts/mohican/directives/mnf-select-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-select-grid/template.html
@@ -16,6 +16,7 @@
         button-label="name"
         item-label="name"
         tick-property="selected"
+        selection-mode="{{mnfSelectType}}"
         helper-elements="">
   </span>
 </div>
