--- a/app/assets/javascripts/mohican/directives/mnf-select/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-select/template.html
@@ -19,6 +19,7 @@
           button-label="name"
           item-label="name"
           tick-property="selected"
+          selection-mode="{{mnfSelectType}}"
           helper-elements="">
     </span>
   </div>
