transitionTo promise - rollback layout select dropdown if rejected
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html
@@ -1,25 +1,25 @@
 <div class="btn-toolbar">
       <div isteven-multi-select ng-show="filterBar.owner.layouts.length > 1"
-            class="primary pull-left"
-            input-model="filterBar.owner.layouts"
-            on-item-click="filterBar.owner.clientLayoutChanged(data.name)"
-            output-model="filterBar.outputBrowsers"
-            button-label="show"
-            item-label="name desc"
-            tick-property="selected"
-            selection-mode="single"
-            helper-elements="">
+           class="primary pull-left"
+           input-model="filterBar.owner.layouts"
+           on-item-click="filterBar.changeLayout(data.name)"
+           output-model="filterBar.outputBrowsers"
+           button-label="show"
+           item-label="name desc"
+           tick-property="selected"
+           selection-mode="single"
+           helper-elements="">
       </div>
       <div isteven-multi-select ng-show="filterBar.owner.backendFilters.length > 1"
-            class="primary pull-left"
-            input-model="filterBar.owner.backendFilters"
-            on-item-click="filterBar.owner.getBackendFilter(data.name)"
-            output-model="filterBar.outputBrowsers"
-            button-label="show"
-            item-label="name"
-            tick-property="selected"
-            selection-mode="single"
-            helper-elements="">
+           class="primary pull-left"
+           input-model="filterBar.owner.backendFilters"
+           on-item-click="filterBar.changeBackendFilter(data.name)"
+           output-model="filterBar.outputBrowsers"
+           button-label="show"
+           item-label="name"
+           tick-property="selected"
+           selection-mode="single"
+           helper-elements="">
       </div>
       <button type="button"
               class="btn {{filterBar.owner.stateMachine.quickFilterShown ? '' : 'btn-primary'}}"
