--- a/app/assets/javascripts/mohican/directives/mn-tabs/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-tabs/template.html
@@ -7,6 +7,8 @@
          role="tab" ng-class="{'active' : tab.active}"
          ng-click="mnTabs.select(tab)"
          style="{{tab.mnContentChanged ? 'color: red !important;' : ''}}">{{tab.heading}}</a>
+      <button ng-show="tab.active && tab.mnShowAddItemButton"
+              ng-click="mnTabs.addNewItem(tab)">+</button>
     </li>
   </ul>
   <ng-transclude>
