--- a/app/assets/javascripts/mohican/directives/mnf-select-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-select-grid/template.html
@@ -4,7 +4,7 @@
     {{mnfDoc[mnfField]}}
   </span>
 </div>
-<div ng-if="!readOnly && (mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing')"
+<div ng-if="!readOnly && (mnfDoc._state === 'added' || mnfDoc._state === 'editing' || mnfDoc._state === 'changed' || mnfDoc._state === 'committing')"
      class="mnf-grid-field-editing"
      ng-class="{'changed': mnfDoc['_' + mnfField + '_changed']}">
   <span is-disabled="mnfDoc._state === 'committing'"
