add new document - part 1
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -4,6 +4,11 @@
       <mn-filter-bar></mn-filter-bar>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <a href="#/orders/new" class="btn btn-primary">New Order</a>
+    </div>
+  </div>
   <div class="mn-grid-layout-row row">
     <div class="col-xs-12" style="position: static;">
       <mnf-form-grid>
