show commit button for new added documents
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-commit/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-commit/template.html
@@ -1,6 +1,6 @@
 <button class="btn btn-primary"
         ng-disabled="mnfDoc._state === 'editing' || mnfDoc._state === 'committing'"
-        ng-if="mnfFormCtrl.mnfCrudShown && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
+        ng-if="mnfFormCtrl.mnfCrudShown && (mnfDoc._state === 'added' || mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
         ng-click="mnfDoc.commit()">
   <span ng-style="mnfDoc._state === 'committing' ? {float: 'left'} : {}">save</span>
   <span class="loader"
