fix: mnf-crud-shown if state is added
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -34,7 +34,7 @@
                     mn-content-changed="ctrl.itemForm['_order_handlers_changed']"
                     mn-show-add-item-button="ctrl.itemForm._state !== 'ready'"
                     add-new-item="ctrl.addNewHandler()">
-              <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed'"
+              <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed' || ctrl.itemForm._state === 'added'"
                              mnf-subdocumets-grid="true">
                 <mn-grid owner="ctrl.handlersDrv">
                   <mnf-delete-grid mnf-doc="item"></mnf-delete-grid>
@@ -45,7 +45,7 @@
                     mn-content-changed="ctrl.itemForm['_order_items_changed']"
                     mn-show-add-item-button="ctrl.itemForm._state !== 'ready'"
                     add-new-item="ctrl.addNewProduct()">
-              <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed'"
+              <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed' || ctrl.itemForm._state === 'added'"
                              mnf-subdocumets-grid="true">
                 <mn-grid owner="ctrl.productsDrv">
                   <mnf-delete-grid mnf-doc="item"></mnf-delete-grid>
