readonly ref filed
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -21,7 +21,8 @@
                          mnf-ref-resource="users"
                          mnf-ref-id="creator_ref"
                          mnf-field="creator_name"
-                         mnf-field-source="['name', 'gender']"></mnf-reference>
+                         mnf-field-source="['name', 'gender']"
+                         read-only="true"></mnf-reference>
           <mnf-text mnf-field="order_number"
                     mnf-label="Order number:"></mnf-text>
           <mnf-text mnf-field="total"
